# sfae

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.oauth  Dockerfile.server  LICENSE  Makefile  NPM_PUBLISHING.md  README.md  build.sh  fly.oauth.toml  install-skill.sh  install.sh  oauth-provider-candidates.md  package.json  release.sh  repo-sweep-report.md  test.sh  vet.yaml
.claude/skills/create-plan/: SKILL.md
.claude/skills/execute-plan/: SKILL.md
.github/workflows/: ci.yml  deploy-oauth.yml  npm-publish.yml  pages.yml  release.yml  vet.yml
crates/sfae-cli/: Cargo.toml
crates/sfae-cli/src/: main.rs  prompt.rs  store_factory.rs
crates/sfae-cli/src/commands/: code.rs  credential.rs  credentials.rs  delete.rs  doctor.rs  embedded_skill.rs  flush.rs  install_skill.rs  mod.rs  prompt.rs  proxy.rs  request.rs  service.rs  show.rs  update.rs
crates/sfae-cli/tests/: distribution.rs  help.rs  postgres_protocol.rs  redis_protocol.rs  request_remote.rs  version.rs
crates/sfae-cli/tests/fixtures/: postgres_migration.sql
crates/sfae-cli/tests/support/: mod.rs
crates/sfae-core/: Cargo.toml  build.rs
crates/sfae-core/src/: api_store.rs  base.css  base.js  browser.rs  browser_code_tests.rs  browser_html.rs  code.html  code.rs  code_html.rs  credential.rs  done.html  error.rs  form.html  http.rs  lib.rs  memory_store.rs  oauth.rs  oauth_done.html  postgres.rs  preview.rs  proxy.rs  redis.rs  secret.rs  service.rs  spec.rs  store.rs  store_tests.rs  ui.rs
crates/sfae-core/tests/: oauth_contract.rs  oauth_manager.rs  proxy_integration.rs
crates/sfae-oauth-server/: Cargo.toml
crates/sfae-oauth-server/migrations/: 001_init.sql
crates/sfae-oauth-server/src/: config.rs  crypto.rs  db.rs  discord.rs  dropbox.rs  github.rs  google.rs  handlers.rs  local.rs  main.rs  provider.rs  state.rs  types.rs
crates/sfae-oauth-server/tests/: mock_provider_integration.rs  mock_provider_revoke_failure.rs
crates/sfae-server/: Cargo.toml
crates/sfae-server/migrations/: 001_credentials.sql
crates/sfae-server/src/: db.rs  handlers.rs  helpers.rs  main.rs  state.rs  types.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  ui_preview.rs
crates/xtask/src/checks/: file_docs.rs  file_lines.rs  function_params.rs  mod.rs
docs/: CNAME  cli.md  env-secrets.md  index.html  page-template.html
docs/includes/: footer.css  footer.html
docs/pages/: privacy.md  terms.md
npm/scripts/: install.js
plans/: 001-initial-implementation.md  002-json-output-mode.md  003-browser-secret-collection.md  004-domain-fallback.md  005-oauth-token-refresh.md  006-oauth-provider-presets.md  007-oauth-token-revocation.md  008-tauri-desktop-integration.md  009-website-and-readme.md  010-multi-field-prompt.md  011-restyle-prompt-pages-2026-04-14.md  012-suppress-browser-password-dialog-2026-04-14.md  013-ci-enforcement-checks-2026-04-17.md  013-violations-baseline.txt  014-hosted-discord-oauth-service.md  015-google-oauth-support.md  016-dropbox-oauth-support.md
scripts/: prepare-npm-package.sh  prepare-pages.sh  render-markdown-pages.sh  stamp-cargo-version.sh  vet.sh
skill/: SKILL.md  install.sh
