[package]
name = "sfae-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for SFAE — Speak Friend, and Enter"

[[bin]]
name = "sfae"
path = "src/main.rs"

[features]
default = ["native-keychain"]
native-keychain = ["sfae-core/native-keychain"]

[dev-dependencies]
assert_cmd = "2"

[dependencies]
sfae-core = { path = "../sfae-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rpassword = "7"
ureq = "3"
serde_json = "1"
