[package]
name = "sfae-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for SFAE — secrets management and API proxying for LLM agents"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"], optional = true }
ureq = "3"
dirs = "6"
libc = "0.2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
regex = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", optional = true }

[features]
default = ["cli", "native-keychain"]
cli = []
native-keychain = ["dep:keyring", "dep:security-framework"]

[dev-dependencies]
tempfile = "3.27.0"
