[package]
name = "sfae-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for SFAE — secrets management and API proxying for LLM agents"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
postgres = "0.19"
redis = { version = "1.3", default-features = false }
dirs = "6"
libc = "0.2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"

[target.'cfg(not(target_os = "macos"))'.dependencies]
keyring = { version = "3", features = ["windows-native", "linux-native"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", optional = true }

[features]
default = ["cli", "native-keychain"]
cli = []
native-keychain = ["dep:keyring", "dep:security-framework"]

[dev-dependencies]
tempfile = "3.27.0"
